--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,8 @@ autors = ["Golubev Matvei <golubevmt@gmail.com>"]
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-libp2p = "0.39"
+libp2p = {version = "0.39", features = ["tcp-tokio"]}
 structopt = "0.3"
+tokio = {version = "1.10", features = ["full"]}
 log = "0.4"
-env_logger = "0.9"
+pretty_env_logger = "0.4"
